API refactorizada usando MVC
